# FakecurrenyDetection

./: .gitignore  .replit  add_user.py  complete_training.py  create_indian_currency_dataset.py  download_and_prepare_dataset.py  download_kaggle_dataset.py  evaluate_model.py  main.py  prepare_indian_currency_dataset.py  pyproject.toml  replit.md  test_predictions.py  train_500_only.py  train_currency_model.py  train_indian_currency_model.py  train_lightweight.py  train_rupee_500_model.py
.local/state/replit/agent/: progress_tracker.md
.local/state/replit/agent/filesystem/: filesystem_state.json
CounterfeitGuard/: .gitignore  .replit  README.md  TRAINING_README.md  add_user.py  app.py  create_dataset.py  create_user.py  model.py  replit.md  requirements.txt  train_denomination_models.py  train_model.py
CounterfeitGuard/instance/: currency_detector.db
CounterfeitGuard/static/css/: style.css
CounterfeitGuard/templates/: base.html  index.html  login.html  register.html  testing.html
attached_assets/: Pasted-My-fake-currency-detection-project-for-Indian-500-notes-is-giving-incorrect-results-The-first-uplo-1762086641584_1762086641586.txt  Pasted-My-fake-currency-detection-project-for-Indian-500-notes-is-giving-incorrect-results-The-first-uplo-1762092073942_1762092073943.txt
instance/: currency_detector.db
model/: evaluation_report.txt  training_log.txt
