[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask==3.0.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "matplotlib==3.8.2",
    "numpy==1.24.3",
    "opencv-python==4.8.1.78",
    "pillow==10.1.0",
    "tensorflow==2.15.0",
    "werkzeug==3.0.1",
]
